--- a/src/main/java/HomeFrame.form
+++ b/src/main/java/HomeFrame.form
@@ -116,41 +116,35 @@
           <Color blue="66" green="0" red="66" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\ACER\Documents\NetBeansProjects\jcoffee\src\main\java\image\icons8-coffee-beans-50.png"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="WELCOME TO JCAFE88!!!"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="CodeSaleButton">
       <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\ACER\Documents\NetBeansProjects\jcoffee\src\main\java\image\sale resize.png"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Code Sale"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CodeSaleButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="CustomerButton">
       <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\ACER\Documents\NetBeansProjects\jcoffee\src\main\java\image\customer resize.png"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Customer"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CustomerButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="OrderButton">
       <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\ACER\Documents\NetBeansProjects\jcoffee\src\main\java\image\order resize.png"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Order"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="OrderButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="AdminButton">
       <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\ACER\Documents\NetBeansProjects\jcoffee\src\main\java\image\admin resize.png"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Admin"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor" postCode="//AdminButton.setBorder(new javax.swing.border.AbstractBorder(javax.swing.border.BevelBorder.RAISED));">
           <Border info="org.netbeans.modules.form.compat2.border.SoftBevelBorderInfo">
@@ -165,9 +159,6 @@
     </Component>
     <Component class="javax.swing.JButton" name="BillButton">
       <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\ACER\Documents\NetBeansProjects\jcoffee\src\main\java\image\bill resize.png"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Bill"/>
       </Properties>
       <Events>
@@ -176,11 +167,11 @@
     </Component>
     <Component class="javax.swing.JButton" name="DrinkButton">
       <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\ACER\Documents\NetBeansProjects\jcoffee\src\main\java\image\drink resize.png"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="    Drink"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="DrinkButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="LogoutButton">
       <Properties>
@@ -192,9 +183,6 @@
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
-        </Property>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\ACER\Documents\NetBeansProjects\jcoffee\src\main\java\image\icons8-logout-rounded-30.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Logout"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
