--- a/src/main/java/HomeFrame.form
+++ b/src/main/java/HomeFrame.form
@@ -145,6 +145,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="AdminButton">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/image/admin resize.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Admin"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor" postCode="//AdminButton.setBorder(new javax.swing.border.AbstractBorder(javax.swing.border.BevelBorder.RAISED));">
           <Border info="org.netbeans.modules.form.compat2.border.SoftBevelBorderInfo">
