--- a/src/main/java/HomeFrame.form
+++ b/src/main/java/HomeFrame.form
@@ -97,7 +97,7 @@
                           <Component id="CustomerButton" alignment="3" min="-2" pref="67" max="-2" attributes="0"/>
                           <Component id="BillButton" alignment="3" min="-2" pref="67" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="118" max="32767" attributes="0"/>
+                      <EmptySpace pref="104" max="32767" attributes="0"/>
                       <Component id="LogoutButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
                   </Group>
@@ -116,11 +116,17 @@
           <Color blue="66" green="0" red="66" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/image/icons8-coffee-beans-50.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="WELCOME TO JCAFE88!!!"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="CodeSaleButton">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/image/sale resize.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Code Sale"/>
       </Properties>
       <Events>
@@ -129,6 +135,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="CustomerButton">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/image/customer resize.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Customer"/>
       </Properties>
       <Events>
@@ -137,6 +146,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="OrderButton">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/image/order resize.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Order"/>
       </Properties>
       <Events>
@@ -162,6 +174,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="BillButton">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/image/bill resize.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Bill"/>
       </Properties>
       <Events>
@@ -170,6 +185,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="DrinkButton">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/image/drink resize.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="    Drink"/>
       </Properties>
       <Events>
@@ -186,6 +204,9 @@
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/image/logout 30x30.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Logout"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
